# Ice

./: .gitignore  CMakeLists.txt  NoteCollectorSettings.txt  README.md  TODO_and_Notes.txt  ToDo.txt
Ice/: CMakeLists.txt
Ice/src/: defines.h  ice.h  logger.h
Ice/src/core/: application.cpp  application.h  application_defines.h  ecs.h  input.cpp  input.h  scene.cpp  scene.h
Ice/src/core/ecs/: ecs.h  ecs_defines.h  entity.cpp  entity.h
Ice/src/core/platform/: compact_array.h  memory_pool.h  platform.h  platform_win32.cpp
Ice/src/math/: linear.h  matrix.h  matrix.hpp  quaternion.h  quaternion.hpp  transform.h  vector.cpp  vector.h  vector.hpp
Ice/src/platform/: compact_array.h  memory_pool.h  platform.h  platform_defines.h  platform_win32.cpp
Ice/src/rendering/: renderer.h  renderer_defines.h
Ice/src/rendering/vulkan/: vulkan.cpp  vulkan.h  vulkan_buffer.cpp  vulkan_command.cpp  vulkan_core.cpp  vulkan_defines.h  vulkan_image.cpp  vulkan_material.cpp  vulkan_platform.cpp  vulkan_renderpass.cpp
Ice/src/tools/: array.h  compact_array.h  flag_array.h  lexer.cpp  lexer.h  logger.cpp  logger.h  pool.h
IceEngine/: Ice.sln
IceEngine/IceCore/: IceCore.vcxproj  IceCore.vcxproj.filters
IceEngine/IceCore/src/: asserts.h  defines.h  ice.h  logger.h  profiler.h  service_hub.h
IceEngine/IceCore/src/core/: application.cpp  application.h  camera.cpp  camera.h  ecs_components.h  ecs_controller.h  event.cpp  event.h  gameobject.h  input.cpp  input.h  memory_manager.cpp  memory_manager.h  (+1 more)
IceEngine/IceVault/.obsidian/: workspace
IceEngine/Sandbox/: Sandbox.vcxproj  Sandbox.vcxproj.filters
IceEngine/Sandbox/src/: Source.cpp
IceSandbox/: CMakeLists.txt  CMakeSettings.json
IceSandbox/Ice/: CMakeLists.txt
IceSandbox/Ice/src/: NewFile  asserts.h  defines.h  ice.h  logger.h
IceSandbox/Ice/src/core/: application.c  application.cpp  application.h  camera.cpp  camera.h  ecs.h  ecs_components.h  event.cpp  gameobject.h  gui.h  input.cpp  input.h  memory_manager.cpp  object.h  re_application.cpp  re_application.h  scene.h
IceSandbox/Ice/src/math/: linear.h  matrix.h  transform.h  vector.h  vectors.h
IceSandbox/Ice/src/platform/: file_system.cpp  file_system.h  platform.cpp  platform.h  platform_win32.c  platform_win32.cpp  platfrom.cpp  re_platform.h  re_platfrom.cpp
IceSandbox/Ice/src/renderer/: buffer.cpp  buffer.h  mesh.h  renderer.cpp  renderer_backend.h  shader.h  shader_parameters.h
IceSandbox/Ice/src/renderer/vulkan/: vulkan_backend.cpp  vulkan_backend.h  vulkan_context.h  vulkan_descriptor.cpp  vulkan_descriptor.h  vulkan_material.cpp  vulkan_material.h  vulkan_shader.h
IceSandbox/Ice/src/rendering/: material.cpp  material.h  mesh.h  re_renderer.cpp  re_renderer.h  re_renderer_backend.h  render_context.h  renderer.cpp  renderer.h  renderer_backend.h  renderer_context.h  renderer_defines.h  renderer_settings.h  shader.h
IceSandbox/Ice/src/rendering/old_vulkan/: vk_command.cpp  vk_context.h  vk_descriptors.cpp  vk_forward.cpp  vk_image.cpp  vk_imgui.cpp  vk_material.cpp  vk_mesh.cpp  vk_platform.cpp  vk_renderer.cpp  vk_renderer.h
IceSandbox/Ice/src/rendering/vulkan/: re_renderer_vulkan.cpp  re_renderer_vulkan.h  re_renderer_vulkan_context.h  re_renderer_vulkan_platform.cpp  re_vulkan_assert.h  re_vulkan_context.h  re_vulkan_image.cpp  re_vulkan_platform.cpp  renderer_vulkan.cpp  renderer_vulkan.h  vk_buffer.cpp  vk_command.cpp  vk_context.h  vk_deferred.cpp  vk_image.cpp  vk_imgui.cpp  vk_material.cpp  vk_mesh.cpp  vk_platform.cpp  vk_renderer.cpp  vk_renderer.h  vk_renderpass.cpp  vk_shadow.cpp  vulkan.cpp  vulkan.h  vulkan_buffer.cpp  vulkan_command.cpp  vulkan_context.h  vulkan_deferred.cpp  vulkan_defines.h  vulkan_descriptors.cpp  vulkan_forward.cpp  vulkan_image.cpp  vulkan_imgui.cpp  vulkan_material.cpp  vulkan_mesh.cpp  vulkan_platform.cpp  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_renderpass.cpp  (+1 more)
IceSandbox/Ice/src/tools/: lexer.cpp  lexer.h
IceSandbox/Ice/src/zcore/: zapplication.cpp  zapplication.h
IceSandbox/Ice/src/zplatform/: zplatform.h  zplatform_win32.cpp  zwindow.h  zwindow_win32.cpp
IceSandbox/Sandbox/: CMakeLists.txt
IceSandbox/Sandbox/res/models/: Plane.obj.bak
IceSandbox/Sandbox/res/shaders/: _light_blank.frag  _light_blank.vert  _light_half.frag  _light_half.vert  _light_pbr.frag  _light_shadow.frag  blank.frag  blank.vert  blank_deferred.frag  blank_forward.frag  blue.frag  bluemvp.vert  deferred.vert  deferredlight.frag  deferredlight.vert  depth.frag  fresnel.frag  geo_blank.frag  geo_pbr.vert  lights.frag  mvp.vert  pbr.frag  red.frag  shade_blank.frag  shade_blank.vert  shadow.frag  test.frag  texture.frag  textured.frag
IceSandbox/Sandbox/res/shaders/compiled/: _light_blank.frag.desc  _light_blank.frag.spv  _light_blank.vert.spv  _light_half.frag.desc  _light_half.frag.spv  _light_half.vert.desc  _light_half.vert.spv  _light_pbr.frag.spv  blank.frag.desc  blank.frag.spv  blank.vert.desc  blank.vert.spv  blank_deferred.frag.desc  blank_deferred.frag.spv  blank_deferred.vert.desc  blank_forward.frag.spv  blank_forward.vert.desc  blank_forward.vert.spv  blue.flayout  blue.frag.spv  bluemvp.vert.spv  deferredlight.frag.spv  deferredlight.vert.spv  depth.frag.spv  fresnel.frag.spv  geo_blank.frag.spv  geo_blank.vert.desc  geo_pbr.frag.desc  geo_pbr.vert.spv  lights.frag.spv  mvp.vert.spv  pbr.frag.desc  pbr.frag.spv  red.flayout  red.frag.spv  scene.frag.spv  scene.vert.spv  shade_blank.frag.spv  shade_blank.vert.spv  shade_pbr.frag.spv  (+7 more)
IceSandbox/Sandbox/src/: source.cpp
IceSandbox/libraries/include/stb/: stb_image.h
IceVault/: Buffers.md  Layers.md  Materials and shaders.md  Platform Layer.md  Rendering.md  Requirements.md  Scene.md  Textures.md
IceVault/Materials/: Materials.md  VulkanMaterial.md
IceVault/Shaders/: ShaderManager.md  Shaders.md  VulkanShader.md
IceVault/Specification/: Roadmap.md  Settings.md  aaaaaa.md
TestApp/: CMakeLists.txt
TestApp/res/shaders/: blank.frag  blank.vert
TestApp/res/shaders/compiled/: blank.frag.desc  blank.frag.spv  blank.vert.desc
TestApp/src/: source.cpp
(+59 files in other folders)
